# atl

./: .gitignore  .gitmodules  CMakeLists.txt  DaemonTerminator.cpp  Receiver.cpp  Sender.cpp  backlog.txt  build.sh  creator.cpp  daemon_terminator.cpp  destroyer.cpp  receiver.cpp  sender.cpp
atl_client/: ATLClient.cpp  ATLClient.hpp  CMakeLists.txt  atl_client.cpp  atl_client.hpp
atl_client/client/: CMakeLists.txt  ClientImpl.cpp  ClientImpl.hpp  client_impl.cpp  client_impl.hpp
atl_client/client/tests/: CMakeLists.txt  ClientImplTest.cpp  client_impl_test.cpp
atl_daemon/: ATLDaemon.cpp  CMakeLists.txt  ConnectionOwner.cpp  ConnectionOwner.hpp  atl_daemon.cpp
atl_daemon/daemon/: CMakeLists.txt  Connection.cpp  Connection.hpp  ConnectionDiary.cpp  ConnectionDiary.hpp  ConnectionMapWrapper.cpp  ConnectionMapWrapper.hpp  DaemonLoop.cpp  DaemonLoop.hpp  connection.cpp  connection.hpp  connection_diary.cpp  connection_diary.hpp  connection_diary_interface.hpp  connection_map_wrapper.cpp  connection_map_wrapper.hpp  connection_map_wrapper_interface.hpp  daemon_loop.cpp  daemon_loop.hpp
atl_daemon/daemon/mocks/: ConnectionDiaryMock.hpp  ConnectionMapWrapperMock.hpp  connection_diary_mock.hpp  connection_map_wrapper_mock.hpp
atl_daemon/daemon/test/: CMakeLists.txt  ConnectionDiaryTest.cpp  DaemonLoopTest.cpp
atl_daemon/daemon/tests/: CMakeLists.txt  DaemonLoopTest.cpp  connection_diary_test.cpp  daemon_loop_test.cpp
common/: CMakeLists.txt  ShmTransporter.cpp  ShmTransporter.hpp  ShmTransporterInterface.hpp  shm_transporter.cpp  shm_transporter.hpp
common/mocks/: ShmTransporterMock.hpp  shm_transporter_mock.hpp
examples/: CMakeLists.txt  protobuf_client.cpp  protobuf_server.cpp
ftests/: CMakeLists.txt  environment.py  py_atl.cpp  send_receive_protobuf.feature  send_receive_serialized_data.feature
ftests/cpp/: CMakeLists.txt  client.cpp  client.hpp  exp_calc_client.cpp  exp_calc_client.hpp  exp_calc_server.cpp  exp_calc_server.hpp  py_atl.cpp
ftests/steps/: helper.py  send_receive_protobuf.py  send_receive_serialized_data.py
messages/: CMakeLists.txt  example.pb.cc  example.pb.h  example.proto
shared_memory/: CMakeLists.txt  SharedMemoryTransporter.cpp  SharedMemoryTransporter.hpp  ShmTransporter.cpp  ShmTransporter.hpp  ShmTransporterInterface.hpp
shared_memory/mocks/: ShmTransporterMock.hpp
